src/index.css
/* @import "tailwindcss";

@layer base {
  body {
    font-family: "Poppins", sans-serif;
  }
} */

/* src/index.css */

@import "tailwindcss";

/* Definisi tema dan kustomisasi lainnya di dalam @theme */
@theme {
  /* Definisi keyframes untuk efek 'shine' */
  @keyframes shine {
    from {
      background-position: 100%;
    }
    to {
      background-position: -100%;
    }
  }

  /* Definisi animation utility yang akan menghasilkan kelas seperti 'animate-shine' */
  --animation-shine: shine 5s linear infinite;
}

@layer base {
  body {
    font-family: "Poppins", sans-serif;
  }
}

@theme inline {
  --animate-marquee: marquee var(--duration) infinite linear;
  --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;

  @keyframes marquee {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(calc(-100% - var(--gap)));
    }
  }
  @keyframes marquee-vertical {
    from {
      transform: translateY(0);
    }
    to {
      transform: translateY(calc(-100% - var(--gap)));
    }
  }
}

